--- a/www/templates/tab-new-list.html
+++ b/www/templates/tab-new-list.html
@@ -13,39 +13,39 @@
             </div>
 
             <div class="item item-divider">Vegetables</div>
-            <ion-checkbox ng-repeat="vegetable in vegetables" ng-model="isChecked">{{vegetable}}</ion-checkbox>
+            <ion-checkbox ng-repeat="vegetable in vegetables" ng-model="vegetable.checked">{{vegetable.name}}</ion-checkbox>
 
             <span class="padding"></span>
 
             <div class="item item-divider">Fruits</div>
-            <ion-checkbox ng-repeat="fruit in fruits" ng-model="isChecked">{{fruit}}</ion-checkbox>
+            <ion-checkbox ng-repeat="fruit in fruits" ng-model="fruit.checked">{{fruit.name}}</ion-checkbox>
 
             <span class="padding"></span>
 
             <div class="item item-divider">Others</div>
-            <ion-checkbox ng-repeat="other in others" ng-model="isChecked">{{other}}</ion-checkbox>
+            <ion-checkbox ng-repeat="other in others" ng-model="other.checked">{{other.name}}</ion-checkbox>
 
             <span class="padding" style="display:block"></span>
             <span class="padding" style="display:block"></span>
 
             <div class="text-center">
                 <button class="button button-stable" ng-click="addItem()">Add more items</button>
-                <button class="button button-assertive">Clean All</button>
-                <button class="button button-balanced" ng-disabled="nameForm.$invalid">Save List</button>
+                <button class="button button-assertive" ng-click="cleanAll()">Clean All</button>
+                <button class="button button-balanced" ng-disabled="nameForm.$invalid" ng-click="saveList()">Save List</button>
             </div>
 
             <span class="padding" style="display:block"></span>
 
-            <div class="list" ng-show="addItemClicked">
+            <div class="list" ng-show="addItemClicked" ng-form="addItemForm">
                 <div class="item item-input-inset">
                     <label class="item-input-wrapper">
-                        <input type="text" placeholder="Item name">
+                        <input type="text" placeholder="Item name" ng-model="newItem.name" name="item" required>
                     </label>
-                    <button class="button button-calm">Add</button>
+                    <button class="button button-calm" ng-click="saveItem()" ng-disabled="addItemForm.$invalid">Add</button>
                 </div>
             </div>
 
-            
+
         </div>
     </ion-content>
 </ion-view>
