--- a/www/templates/tab-view-list.html
+++ b/www/templates/tab-view-list.html
@@ -1,7 +1,7 @@
 <ion-view view-title="List">
 
     <ion-nav-buttons side="primary">
-      <button class="button button-clear" ui-sref="tab-saved">
+      <button class="button button-assertive button-clear" ui-sref="saved">
           <i class="ion-arrow-left-c"></i>
       </button>
     </ion-nav-buttons>
@@ -10,18 +10,7 @@
 
         <div class="list">
 
-            <div class="item item-divider">Vegetables</div>
-            <ion-checkbox ng-repeat="vegetable in vegetables" ng-model="isChecked">{{vegetable}}</ion-checkbox>
-
-            <span class="padding"></span>
-
-            <div class="item item-divider">Fruits</div>
-            <ion-checkbox ng-repeat="fruit in fruits" ng-model="isChecked">{{fruit}}</ion-checkbox>
-
-            <span class="padding"></span>
-
-            <div class="item item-divider">Others</div>
-            <ion-checkbox ng-repeat="other in others" ng-model="isChecked">{{other}}</ion-checkbox>
+            teste
         </div>
         </ion-content>
     </ion-view>
