--- a/www/templates/tab-saved.html
+++ b/www/templates/tab-saved.html
@@ -2,9 +2,8 @@
     <ion-content>
 
         <ion-list>
-            <ion-item href="#/tab-view-list" ng-repeat="list in lists">
+            <ion-item href="#/tab/view-list" ng-repeat="list in lists">
                 {{list.name}}
-                <ion-option-button class="button-calm" ng-click="editList()">Edit</ion-option-button>
                 <ion-option-button class="button-assertive" ng-click="delete()">Delete</ion-delete-button>
             </ion-item>
         </ion-list>
