--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,7 +1,5 @@
 
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
-
-
+<ion-tabs class="tabs-icon-top tabs-balanced tabs-color-active-stable">
   <ion-tab title="List" icon-off="ion-ios-list-outline" icon-on="ion-ios-list" href="#/tab/new-list">
     <ion-nav-view name="tab-new-list"></ion-nav-view>
   </ion-tab>
@@ -9,8 +7,4 @@
   <ion-tab title="Saved" icon-off="ion-ios-folder-outline" icon-on="ion-ios-folder" href="#/tab/saved">
     <ion-nav-view name="tab-saved"></ion-nav-view>
   </ion-tab>
-
-
-
-
 </ion-tabs>
