--- a/www/templates/tab-saved.html
+++ b/www/templates/tab-saved.html
@@ -2,9 +2,9 @@
     <ion-content>
 
         <ion-list>
-            <ion-item href="#/tab/view-list" ng-repeat="list in lists">
+            <ion-item href="#/tab/view-list/{{list.$id}}" ng-repeat="list in lists">
                 {{list.name}}
-                <ion-option-button class="button-assertive" ng-click="delete()">Delete</ion-delete-button>
+                <ion-option-button class="button-assertive" ng-click="delete(list)">Delete</ion-delete-button>
             </ion-item>
         </ion-list>
 
