--- a/www/templates/tab-view-list.html
+++ b/www/templates/tab-view-list.html
@@ -1,16 +1,16 @@
-<ion-view view-title="List">
+<ion-view view-title="{{list.name}}">
 
-    <ion-nav-buttons side="primary">
-      <button class="button button-assertive button-clear" ui-sref="saved">
-          <i class="ion-arrow-left-c"></i>
-      </button>
-    </ion-nav-buttons>
+    <ion-nav-bar class="bar-balanced">
+      <ion-nav-back-button class="button-clear">
+        <i class="ion-arrow-left-c"></i> Back
+      </ion-nav-back-button>
+    </ion-nav-bar>
 
     <ion-content class="padding">
-
-        <div class="list">
-
-            teste
-        </div>
-        </ion-content>
-    </ion-view>
+        <ul class="list">
+            <li class="item" ng-repeat="item in list.items | orderBy:'+name'">
+              {{item.name}}
+            </li>
+        </ul>
+    </ion-content>
+</ion-view>
